Add PostgreSQL support for persistent data storage
- Add database.js with dual SQLite/PostgreSQL support
- Update server.js to use new database configuration
- Add pg dependency for PostgreSQL support
- Update env.example with database configuration
- Fixes data loss issue on Render redeployments

--- a/env.example
+++ b/env.example
@@ -13,8 +13,12 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 # Replace with your actual Render URL
 CORS_ORIGIN=https://your-app-name.onrender.com
 
-# Database (SQLite file will be created automatically)
+# Database Configuration
+# For local development (SQLite)
 DATABASE_URL=./calm-typing.db
+
+# For production (Render will provide PostgreSQL URL)
+# DATABASE_URL=postgresql://username:password@host:port/database
 
 # Optional: Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
