--- a/package.json
+++ b/package.json
@@ -1,6 +1,32 @@
 {
   "name": "calm-typing-server",
   "version": "1.0.0",
+  "description": "Simple community server for calm-typing (static + websocket)",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  }
+}
+{
+  "name": "calm-typing-server",
+  "version": "1.0.0",
+  "description": "Simple community server for calm-typing (static + websocket)",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  }
+}
+{
+  "name": "calm-typing-server",
+  "version": "1.0.0",
   "description": "A calming typing experience with server-side authentication and data persistence",
   "main": "server.js",
   "scripts": {
