--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-passages": "node test-passages.js",
+    "debug-db": "node debug-database.js",
+    "test-all": "npm run debug-db && npm run test-passages"
   },
   "keywords": [
     "typing",
@@ -29,6 +32,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
